[package]
name = "epaper_ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "epaper_ui"
path = "src/lib.rs"

[[bin]]
name = "epaper_ui"
path = "src/bin/main.rs"

[[bin]]
name = "hello_world"
path = "src/bin/hello_world.rs"

[[bin]]
name = "weather"
path = "src/bin/weather.rs"


[dependencies]
# For interfacing with BCM2835 (Raspberry Pi GPIO)
rppal = "0.16.0"
# For error handling
anyhow = "1.0"
thiserror = "1.0"
# For downcasting trait objects
downcast-rs = "1.2.0"
# For logging
log = "0.4"
env_logger = "0.11"
# For image manipulation
embedded-graphics = "0.8.1"
# For asynchronous programming (if needed)
tokio = { version = "1.36", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]